=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.04 - IN DEVELOPMENT

=over

=item *

Added the ability to change an element's class in the Element Editor
UI if the element library is configured to allow it (using the
C<ChangeableElementClasses> directive in F<set.conf>).

=item *

Added a new WYSIWYG elementclass L<Krang::ElementClass::PoorText> and all
it takes. [Bodo Schulze]

=item *

Fixed bug where user could Edit a story, then View an old version of it,
then click Edit from the View screen, in effect wiping out anything
that had been left unsaved in their session. [Noam Weinstein]

=item *

Fixed bug where it was possible from the View Schedule screen to 'View' the 
version of a Story or Media currently open for edit, causing confusion and
the possible loss of changes if the user clicked 'Edit' again. [Noam Weinstein]

=item *

Ported fix to unpreview a media object when it is deleted 
(instead of just unpublishing it). [David Kaufman]

=item *

Refactored bulk edit in its own classes.  The legacy textarea-based
bulk editing is in L<Krang::BulkEdit::Textarea>.  Xinha-based bulk
editing is provided by L<Krang::BulkEdit::Xinha>. This module largely
use parsing instead of regexes to sanitize/scrub the HTML coming from
Xinha. Xinha's toolbar and the set of allowed block-level is
configurable via subclassing L<Krang::BulkEdit::Xinha::Config>.  This
module also allows to configure whether paragraphs should be split on
BR tags. [Bodo Schulze]

=item *

Pass the browser engine name to the environment via
KRANG_BROWSER_ENGINE. This enables clients to dispatch to
Krang::Markup::SomeBrowserEngine methods. [Bodo Schulze]

=item *

Added modules to filter incoming/outgoing HTML markup according to
what different browser engines' markup commands can handle in WYSIWYG
areas.  The base class L<Krang::Markup> is subclassed by
L<Krang::Markup::Gecko>, L<Krang::Markup::IE> and
L<Krang::Markup::WebKit>. [Bodo Schulze]
